# ray-tracer

./: .gitignore  Cargo.toml  README.md  flamegraph.sh
.github/workflows/: rust.yml
examples/: ch13_cone.rs  ch13_cylinder.rs  ch14_hexagon.rs  ch15_triangle.rs  hexagon.rs  triangle.rs
samples/scenes/: ch09_plane.yml  ch10_pattern.yml  ch11_reflection.yml  cover.yml  fresnel.yml  group.yml  reflect-refract.yml  shadow-glamour-shot.yml
scenes/: ch10_pattern.yml  ch11_refraction.yml  ch12_cube.yml  cover.yml  reflect-refract.yml
src/: approx_eq.rs  camera.rs  canvas.rs  color.rs  epsilon.rs  intersection.rs  lib.rs  light.rs  material.rs  matrix.rs  object.rs  pattern.rs  plane.rs  point.rs  ray.rs  scene.rs  shape.rs  sphere.rs  transformation.rs  tuple.rs  vector.rs  world.rs
src/float/: approx_eq.rs  epsilon.rs  mod.rs
src/io/: obj.rs  yaml.rs
src/primitive/: matrix.rs  matrix2.rs  matrix3.rs  mod.rs  point.rs  tuple.rs  vector.rs
src/rtc/: bounds.rs  camera.rs  canvas.rs  color.rs  intersection.rs  light.rs  material.rs  mod.rs  object.rs  pattern.rs  ray.rs  scene.rs  shape.rs  transformation.rs  world.rs
src/rtc/lights/: area_light.rs  point_light.rs
src/rtc/shapes/: cone.rs  cube.rs  cylinder.rs  group.rs  plane.rs  sphere.rs  (+3 more)
src/scene/: camera.rs  ch09_plane.rs  ch10_pattern.rs  ch11_reflection.rs  ch11_refraction.rs  ch12_cube.rs  default.rs  mod.rs
src/scenes/: ch09_plane.rs  ch10_pattern.rs  ch11_reflection.rs  ch11_refraction.rs  ch12_cube.rs  ch13_cone.rs  ch13_cylinder.rs  default.rs  mod.rs
src/shape/: mod.rs  plane.rs  sphere.rs
