[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Alexandre Hamez <alexandre.hamez@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
float-cmp = "0.8.0"
image = "0.23.12"
rand = {version="0.8", features = ["small_rng"]}
rayon = "1.5"
yaml-rust = "0.4"

[profile.release]
debug = true
