[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Alexandre Hamez <alexandre.hamez@gmail.com>"]
edition = "2018"

[dependencies]
atomic-counter = "1.0"
bincode = "1.3"
clap = "2.33"
flate2 = "1.0"
float-cmp = "0.8"
image = "0.23"
rand = {version="0.8", features = ["small_rng"]}
rayon = "1.5"
serde = {version="1.0", features = ["derive", "rc"]}
sha3 = "0.9"
yaml-rust = "0.4"

[profile.release]
debug = true
