[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Alexandre Hamez"]
edition = "2021"

[dependencies]
atomic-counter = "1.0"
bincode = "1.3"
clap = "2.34"
flate2 = "1.0"
float-cmp = "0.9"
image = "0.23"
jemallocator = "0.3.0"
rand = {version="0.8", features = ["small_rng"]}
rayon = "1.5"
serde = {version="1.0", features = ["derive", "rc"]}
sha3 = "0.9"
# smallvec = {version = "1.6", features = ["union"]} Requires Rust 1.49
smallvec = "1.7"
yaml-rust = "0.4"

[profile.release]
debug = true
